--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,7 @@
 /Sources/Common/__recovery/
 /Sources/HTMLParse/__history/
 /binn/
+/Sources/Translate/__recovery/
+/Sources/UnRAR/__history/
+/arch.bat
+/arch.txt
